ledger/sparse-struct/tests/ui/unit-variant.stderr
error: `SparseStruct` can only be derived for enums containing newtype variants (tuple variants with a single type).
 --> tests/ui/unit-variant.rs:6:5
  |
6 |     VariantB,
  |     ^^^^^^^^
